Sat Aug 26 17:56:50 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* sample.exp: Add inetd test

Thu Aug 24 18:48:01 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Thu Aug 3 11:57:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin.exp - Gut expected string handling for kadmin5 until we
		firm up a concrete output format that we can test for.  Remove
		addv4 function test since it isn't supported in the same way.


Mon Jul 17 15:27:34 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin.exp - Remove parameters from command lines of admin utilities
		because they're not needed anymore since we have the KDC
		profile.  Also remove prompting for the master key since we
		have full usage of the stash file.

Fri Jun  9 23:45:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kadmin.exp: Use the principal "krbtest/admin@KRBTEST.COM" for
		kadmin.

Mon Jun 5 16:10:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin.exp - Change prompting order for kadmin ank and kadmin cpw.


Thu Jun 1 14:50:02 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin.exp: Change admin instance name to kadmin.


Mon May 22 15:44:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gssapi.exp	- Add dejagnu test for GSS-API client and server.


Thu May 11 12:25:38 EDT 1995	Paul Park	(pjpark@mit.edu)
	Add kadmin.exp for kadmin tests.

Wed May 10 17:00:01 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* .Sanitize (Things-to-keep): Add sample.exp

	* sample.exp: Added sample client/server tests.

Sat May  6 17:12:37 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* standalone.exp: klist test - added new line to prevent an OSF/1
	        expect bug which would hang the klist process in waiting.

Fri May  5 12:49:19 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* rcp.exp: (rcp_test()): Encrypted rcp are no longer expected to
		fail. 

Fri May 05 09:21:21 1995  Chris Provenzano (proven@mit.edu)

	* rcp.exp (rcp_test()): Pass -c and -C args to encrypted rcp.